--- a/_publications/2016-01-23-formal-verification-of-stability-properties-in-cyber-physical-systems.html
+++ b/_publications/2016-01-23-formal-verification-of-stability-properties-in-cyber-physical-systems.html
@@ -18,6 +18,7 @@ links:
  author = {Matthew Chan and Daniel Ricketts and Sorin Lerner and Gregory Malecha},
  title = {Formal {V}erification of {S}tability {P}roperties of {C}yber-physical {S}ystems},
  conference={CoqPL'16},
+ month={Jan}
  year = {2016},
  location = {St. Petersburg, FL, USA},
 }
