fix the more link on the main page.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@ title: Gregory Malecha
 {% endfor %}
 {% if posts.size > 5 %}
 <li style="text-align: center;">
-  <a class="btn btn-primary" href="{% link publications/index.html %}">Read more</a>
+  <a class="btn btn-primary" href="{% link reflections/index.html %}">Read more</a>
 </li>
 {% endif %}
