--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@ title: Gregory Malecha
     <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
     <small>{{ post.author }} - {{ post.date | date: "%b %-d, %Y" }}</small>
     <blockquote class="card-text">
-      {{ post.excerpt | remove:'<p>' | remove:'</p>' | strip }}
+      {{ post.excerpt | strip }}
     </blockquote>
+    {% unless post.tags.empty? %}
+    <p class="tags">
+      {% for tg in post.tags %}
+      <span class="tag blue">{{ tg }}</span>
+      {% endfor %}
+    </p>
+    {% endunless %}
   </div>
 </li>
 {% endfor %}
