--- a/reflections/index.html
+++ b/reflections/index.html
@@ -11,7 +11,7 @@ extra_css:
   <div class="card-block">
   <h3><a href="{{ post.url }}">{{ post.title }} <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a></h3>
   <div class="secondary-text" style="margin-bottom: 5pt">{{ post.author }} @ {{ post.date | date:"%Y-%m-%d" }}</div>
-  <blockquote class="excerpt">{{ post.excerpt | remove: '<p>' | remove: '</p>'}}</blockquote>
+  <blockquote class="excerpt">{{ post.excerpt }}</blockquote>
   {% unless post.tags.empty? %}
   <p class="tags">
     {% for tg in post.tags %}
